#122: fixing alignment of button text

--- a/static/scss/buttons.scss
+++ b/static/scss/buttons.scss
@@ -167,12 +167,15 @@
   border-color: $white;
   color: $white;
   min-width: 0;
-  padding: rem(12) rem(24);
+  padding: rem(12) rem(24) rem(12) rem(46);
   margin: 0 rem(10);
 
   .icon-thumbs, 
   .icon-expand {
     font-size: 24px;
+    position: absolute;
+    top: rem(12);
+    left: rem(24);
   }
 
   .icon-expand {
